--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "chart.js": "^4.5.0",
     "firebase": "^12.2.1",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-helmet-async": "^2.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
